--- a/src/app/pages/message-board/message-board.page.html
+++ b/src/app/pages/message-board/message-board.page.html
@@ -2,20 +2,22 @@
   <ion-toolbar color="light">
     <div class="toolbar-wrapper">
       <ion-title text-left>
-        Family Hub
+        Hub
       </ion-title>
-      <ion-icon name="refresh-outline" (click)="refresh()"></ion-icon>
     </div>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-refresher slot="fixed" (ionRefresh)="refreshEvent($event)">
+    <ion-refresher-content refreshingSpinner="lines-sharp-small"></ion-refresher-content>
+  </ion-refresher>
   <ion-card *ngFor="let game of baseballData">
     <ion-progress-bar *ngIf="game.gameStatus === 'In Progress'" type="indeterminate" color="warning"></ion-progress-bar>
     <ion-card-header>
       <div class="last-updated">
         <ion-chip color="warning">Sports</ion-chip>
-        <ion-note *ngIf="game.gameStatus !== 'Final'" color="medium">Last updated {{game.lastUpdate | date: 'MMM d' }} at {{game.lastUpdate | date: 'h:mma'}} ET</ion-note>
+        <ion-note class="live-updates" *ngIf="game.gameStatus !== 'Final'" color="medium">Last updated at {{game.lastUpdate | date: 'h:mma'}} ET</ion-note>
         <ion-note *ngIf="game.gameStatus === 'Final' && game.oriolesOutcome" color="medium" class="orioles-outcome">{{game.oriolesOutcome}}</ion-note>
       </div>
       <div class="sports-banner">
@@ -79,11 +81,28 @@
         </div>
       </div>
     </div>
-    <div class="pitcher-duel" *ngIf="game.gameStatus !== 'Final'">
-      <ion-note *ngIf="game.gameStatus !== 'In Progress' && game.gameStatus !== 'Final' && game.initialGameInfo[0].initialGameData.probablePitchers.away">SP: {{game.initialGameInfo[0].initialGameData.probablePitchers.away.fullName}}</ion-note>
-      <ion-note *ngIf="game.gameStatus !== 'In Progress' && game.gameStatus !== 'Final' && !game.initialGameInfo[0].initialGameData.probablePitchers.away">SP: TBD</ion-note>
-      <ion-note *ngIf="game.gameStatus !== 'In Progress' && game.gameStatus !== 'Final' && !game.initialGameInfo[0].initialGameData.probablePitchers.home">SP: TBD</ion-note>
-      <ion-note *ngIf="game.gameStatus !== 'In Progress' && game.gameStatus !== 'Final' && game.initialGameInfo[0].initialGameData.probablePitchers.home">SP: {{game.initialGameInfo[0].initialGameData.probablePitchers.home.fullName}}</ion-note>        
+    <div class="pitcher-duel" *ngIf="game.gameStatus !== 'Final' && (game.gameStatus === 'Scheduled' || game.gameStatus === 'Pre-Game' || game.gameStatus === 'Warmup')">
+      <ion-card-subtitle>Starting Pitchers</ion-card-subtitle>
+      <div class="pregame-pitchers">
+        <div class="left-side">
+          <ion-avatar class="headshot-live"><img src="https://midfield.mlbstatic.com/v1/people/{{game.initialGameInfo[0].initialGameData.probablePitchers.away.id}}/spots/120"/></ion-avatar>
+          <div class="stats-wrapper" *ngIf="game.startingAwayPitcherStats && (game.gameStatus === 'Scheduled' || game.gameStatus === 'Pre-Game' || game.gameStatus === 'Warmup')">
+            <ion-note *ngIf="game.initialGameInfo[0].initialGameData.probablePitchers.away">{{game.initialGameInfo[0].initialGameData.probablePitchers.away.fullName}}</ion-note>
+            <ion-note *ngIf="!game.initialGameInfo[0].initialGameData.probablePitchers.away">TBD</ion-note>
+            <ion-note *ngIf="game.initialGameInfo[0].initialGameData.probablePitchers.away">ERA {{game.startingAwayPitcherStats[0].stat.era}}</ion-note>
+            <ion-note *ngIf="game.startingAwayPitcherStats">({{game.startingAwayPitcherStats[0].stat.wins}}-{{game.startingAwayPitcherStats[0].stat.losses}})</ion-note>
+          </div>
+        </div>
+        <div class="right-side">
+          <ion-avatar class="headshot-live"><img src="https://midfield.mlbstatic.com/v1/people/{{game.initialGameInfo[0].initialGameData.probablePitchers.home.id}}/spots/120" /></ion-avatar>
+          <div class="stats-wrapper" *ngIf="game.startingHomePitcherStats">
+            <ion-note *ngIf="game.gameStatus !== 'In Progress' && game.gameStatus !== 'Final' && !game.initialGameInfo[0].initialGameData.probablePitchers.home">TBD</ion-note>
+            <ion-note *ngIf="game.gameStatus !== 'In Progress' && game.gameStatus !== 'Final' && game.initialGameInfo[0].initialGameData.probablePitchers.home">{{game.initialGameInfo[0].initialGameData.probablePitchers.home.fullName}}</ion-note>
+            <ion-note *ngIf="game.initialGameInfo[0].initialGameData.probablePitchers.home">ERA {{game.startingHomePitcherStats[0].stat.era}}</ion-note>
+            <ion-note>({{game.startingHomePitcherStats[0].stat.wins}}-{{game.startingHomePitcherStats[0].stat.losses}})</ion-note>
+          </div>
+        </div>
+      </div>
     </div>
     <div class="final-pitchers" *ngIf="game.gameStatus === 'Final' && game.initialGameInfo[0].finalData">
       <div class="duel">
@@ -102,17 +121,26 @@
       </div>
     </div>
     <div class="venue" *ngIf="game.gameStatus === 'Scheduled' || game.gameStatus === 'Pre-Game' || game.gameStatus === 'Warmup'">
-      <ion-note>{{game.initialGameInfo[0].initialGameData.venue.name}} <br> {{game.initialGameInfo[0].initialGameData.venue.location.city}}, {{game.initialGameInfo[0].initialGameData.venue.location.stateAbbrev}}</ion-note>
-      <ion-note *ngIf="game.initialGameInfo[0].initialGameData.weather.temp && game.initialGameInfo[0].initialGameData.weather.condition">{{game.initialGameInfo[0].initialGameData.weather.temp}}&#xb0;F <br> Condition: {{game.initialGameInfo[0].initialGameData.weather.condition}}</ion-note>
+      <div class="left-side">
+        <ion-note>{{game.initialGameInfo[0].initialGameData.venue.name}} <br> {{game.initialGameInfo[0].initialGameData.venue.location.city}}, {{game.initialGameInfo[0].initialGameData.venue.location.stateAbbrev}}</ion-note>
+      </div>
+      <div class="right-side">
+        <ion-note *ngIf="game.initialGameInfo[0].initialGameData.weather.temp && game.initialGameInfo[0].initialGameData.weather.condition">{{game.initialGameInfo[0].initialGameData.weather.temp}}&#xb0;F <br>{{game.initialGameInfo[0].initialGameData.weather.condition}}</ion-note>
+      </div>
     </div>
     <div *ngIf="game.gameStatus === 'In Progress'" class="game-status">
-      <ion-card-subtitle>Latest Plays:</ion-card-subtitle>
+      <ion-card-subtitle>Latest Plays</ion-card-subtitle>
       <div class="latest-plays" *ngFor="let play of game.initialGameInfo[0].latestPlays">
         <div class="play" *ngIf="play.result.description">
-          <ion-icon name="chevron-forward-outline" *ngIf="play.result.description && !play.result.isOut && !play.about.isScoringPlay"></ion-icon><ion-note *ngIf="play.result.description && !play.result.isOut && !play.about.isScoringPlay">{{play.result.description}}</ion-note>
-          <ion-icon name="chevron-forward-outline" *ngIf="play.result.isOut && play.result.description && !play.about.isScoringPlay"></ion-icon><ion-note *ngIf="play.result.isOut && play.result.description && !play.about.isScoringPlay">{{play.result.description}}<span class="outs">&nbsp;{{play.count.outs}} out(s).</span></ion-note>
-          <ion-icon name="chevron-forward-outline" *ngIf="play.result.isOut && play.about.isScoringPlay && play.result.description"></ion-icon><ion-note *ngIf="play.result.isOut && play.about.isScoringPlay && play.result.description">{{play.result.description}}<span class="outs">&nbsp;{{play.count.outs}} out(s).&nbsp;{{game.initialGameInfo[0].initialGameData.teams.away.abbreviation}} {{play.result.awayScore}} - {{game.initialGameInfo[0].initialGameData.teams.home.abbreviation}} {{play.result.homeScore}}</span></ion-note>
-          <ion-icon name="chevron-forward-outline" *ngIf="!play.result.isOut && play.about.isScoringPlay && play.result.description"></ion-icon><ion-note *ngIf="!play.result.isOut && play.about.isScoringPlay && play.result.description">{{play.result.description}}<span class="outs">&nbsp;{{game.initialGameInfo[0].initialGameData.teams.away.abbreviation}} {{play.result.awayScore}} - {{game.initialGameInfo[0].initialGameData.teams.home.abbreviation}} {{play.result.homeScore}}</span></ion-note>
+          <div class="play-wrapper-top">
+            <ion-icon name="chevron-forward-outline" *ngIf="play.result.description && !play.result.isOut && !play.about.isScoringPlay"></ion-icon><ion-note *ngIf="play.result.description && !play.result.isOut && !play.about.isScoringPlay">{{play.result.description}}</ion-note>
+            <ion-icon name="chevron-forward-outline" *ngIf="play.result.isOut && play.result.description && !play.about.isScoringPlay"></ion-icon><ion-note *ngIf="play.result.isOut && play.result.description && !play.about.isScoringPlay">{{play.result.description}}<span class="outs">&nbsp;{{play.count.outs}} out(s).</span></ion-note>
+            <ion-icon name="chevron-forward-outline" *ngIf="play.result.isOut && play.about.isScoringPlay && play.result.description"></ion-icon><ion-note *ngIf="play.result.isOut && play.about.isScoringPlay && play.result.description">{{play.result.description}}<span class="outs">&nbsp;{{play.count.outs}} out(s).&nbsp;{{game.initialGameInfo[0].initialGameData.teams.away.abbreviation}} {{play.result.awayScore}} - {{game.initialGameInfo[0].initialGameData.teams.home.abbreviation}} {{play.result.homeScore}}</span></ion-note>
+            <ion-icon name="chevron-forward-outline" *ngIf="!play.result.isOut && play.about.isScoringPlay && play.result.description"></ion-icon><ion-note *ngIf="!play.result.isOut && play.about.isScoringPlay && play.result.description">{{play.result.description}}<span class="outs">&nbsp;{{game.initialGameInfo[0].initialGameData.teams.away.abbreviation}} {{play.result.awayScore}} - {{game.initialGameInfo[0].initialGameData.teams.home.abbreviation}} {{play.result.homeScore}}</span></ion-note>
+          </div>
+          <div class="play-wrapper-bottom" *ngIf="play.result.test">
+            <ion-card-subtitle class="play-text" *ngIf="play.result.test">{{play.result.test}}</ion-card-subtitle>
+          </div>
         </div>
       </div>
     </div>
