--- a/src/app/pages/tabs/tabs.page.html
+++ b/src/app/pages/tabs/tabs.page.html
@@ -1,18 +1,18 @@
 <ion-tabs mode="md" *ngIf="!needRegister">
   <ion-tab-bar class="footer-scroll" slot="bottom">
     <ion-tab-button (click)="homeClick()" tab="home">
-      <ion-icon *ngIf="!homeclick" src="../../../assets/streamline/interface-home-3.svg"></ion-icon><small>Home</small>
-      <ion-icon *ngIf="homeclick" src="../../../assets/streamline/home-4.svg"></ion-icon>
+      <ion-icon *ngIf="!homeclick" name="home-outline"></ion-icon><small>Home</small>
+      <ion-icon *ngIf="homeclick" name="home"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button (click)="timelineClick()" tab="timeline">
-      <ion-icon *ngIf="!timelineclick" src="../../../assets/streamline/image-photo-polaroid.svg"></ion-icon><small>Timeline</small>
-      <ion-icon *ngIf="timelineclick" src="../../../assets/streamline/polaroid.svg"></ion-icon>
+      <ion-icon *ngIf="!timelineclick" name="images-outline"></ion-icon><small>Timeline</small>
+      <ion-icon *ngIf="timelineclick" name="images"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button (click)="messageClick()" tab="message-board">
-      <ion-icon *ngIf="!messageclick" src="../../../assets/streamline/imessage.svg"></ion-icon><small>Family Hub</small>
-      <ion-icon *ngIf="messageclick" src="../../../assets/streamline/imessage_fill.svg"></ion-icon>
+      <ion-icon *ngIf="!messageclick" name="people-circle-outline"></ion-icon><small>Hub</small>
+      <ion-icon *ngIf="messageclick" name="people-circle"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button class="profile-button" (click)="profileClick()" tab="profile/{{username}}">
