--- a/src/global.scss
+++ b/src/global.scss
@@ -28,6 +28,7 @@
 @import '~@aws-amplify/ui-angular/theme.css';
 @import url('https://fonts.googleapis.com/css2?family=Baumans&family=Gentium+Book+Plus&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Roboto+Slab:wght@300&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Noto+Emoji&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 @import 'swiper/css/bundle';
 @import 'swiper/css/pagination';
@@ -41,7 +42,7 @@
 }
 
 * {
-    font-family: 'Roboto', sans-serif !important;
+    font-family: 'Inter', sans-serif !important;
 }
 
 #input:active, #input.focus {
