--- a/src/app/pages/message-board/message-board.page.html
+++ b/src/app/pages/message-board/message-board.page.html
@@ -107,16 +107,20 @@
     <div class="final-pitchers" *ngIf="game.gameStatus === 'Final' && game.initialGameInfo[0].finalData">
       <div class="duel">
         <div class="left-side">
-          <ion-avatar class="headshot"><img src="https://midfield.mlbstatic.com/v1/people/{{game.initialGameInfo[0].finalData.winner.id}}/spots/120" /></ion-avatar>
-          <ion-note class="final-stats">W: {{game.initialGameInfo[0].finalData.winner.fullName.split(" ").slice(-1).join(' ')}}
-            <br>{{game.winningPitcherStats}}
-          </ion-note>
+          <div class="name-pic-wrapper">
+            <ion-avatar class="headshot"><img src="https://midfield.mlbstatic.com/v1/people/{{game.initialGameInfo[0].finalData.winner.id}}/spots/120" /></ion-avatar>
+            <ion-card-subtitle class="final-stats">{{game.initialGameInfo[0].finalData.winner.fullName.split(" ").slice(-1).join(' ')}}</ion-card-subtitle>
+            <ion-note class="record">{{game.winningPitcherStats.note}}</ion-note>
+          </div>
+          <ion-note class="game-stats">IP {{game.winningPitcherStats.inningsPitched}}, ER {{game.winningPitcherStats.earnedRuns}}, K {{game.winningPitcherStats.strikeOuts}}<br> BB {{game.winningPitcherStats.baseOnBalls}}, P {{game.winningPitcherStats.pitchesThrown}}</ion-note>
         </div>
         <div class="right-side">
-          <ion-avatar class="headshot"><img src="https://midfield.mlbstatic.com/v1/people/{{game.initialGameInfo[0].finalData.loser.id}}/spots/120" /></ion-avatar>
-          <ion-note class="final-stats">L: {{game.initialGameInfo[0].finalData.loser.fullName.split(" ").slice(-1).join(' ')}}
-            <br>{{game.losingPitcherStats}}
-          </ion-note>
+          <div class="name-pic-wrapper">
+            <ion-avatar class="headshot"><img src="https://midfield.mlbstatic.com/v1/people/{{game.initialGameInfo[0].finalData.loser.id}}/spots/120" /></ion-avatar>
+            <ion-card-subtitle class="final-stats">{{game.initialGameInfo[0].finalData.loser.fullName.split(" ").slice(-1).join(' ')}}</ion-card-subtitle>
+            <ion-note class="record">{{game.losingPitcherStats.note}}</ion-note>
+          </div>
+          <ion-note class="game-stats">IP {{game.losingPitcherStats.inningsPitched}}, ER {{game.losingPitcherStats.earnedRuns}}, K {{game.losingPitcherStats.strikeOuts}}<br> BB {{game.losingPitcherStats.baseOnBalls}}, P {{game.losingPitcherStats.pitchesThrown}}</ion-note>
         </div>
       </div>
     </div>
@@ -138,8 +142,8 @@
             <ion-icon name="chevron-forward-outline" *ngIf="play.result.isOut && play.about.isScoringPlay && play.result.description"></ion-icon><ion-note *ngIf="play.result.isOut && play.about.isScoringPlay && play.result.description">{{play.result.description}}<span class="outs">&nbsp;{{play.count.outs}} out(s).&nbsp;{{game.initialGameInfo[0].initialGameData.teams.away.abbreviation}} {{play.result.awayScore}} - {{game.initialGameInfo[0].initialGameData.teams.home.abbreviation}} {{play.result.homeScore}}</span></ion-note>
             <ion-icon name="chevron-forward-outline" *ngIf="!play.result.isOut && play.about.isScoringPlay && play.result.description"></ion-icon><ion-note *ngIf="!play.result.isOut && play.about.isScoringPlay && play.result.description">{{play.result.description}}<span class="outs">&nbsp;{{game.initialGameInfo[0].initialGameData.teams.away.abbreviation}} {{play.result.awayScore}} - {{game.initialGameInfo[0].initialGameData.teams.home.abbreviation}} {{play.result.homeScore}}</span></ion-note>
           </div>
-          <div class="play-wrapper-bottom" *ngIf="play.result.test">
-            <ion-card-subtitle class="play-text" *ngIf="play.result.test">{{play.result.test}}</ion-card-subtitle>
+          <div class="play-wrapper-bottom" *ngIf="play.result.endInning">
+            <ion-card-subtitle class="play-text" *ngIf="play.result.endInning">{{play.result.endInning}}</ion-card-subtitle>
           </div>
         </div>
       </div>
