--- a/src/app/pages/message-board/message-board.page.scss
+++ b/src/app/pages/message-board/message-board.page.scss
@@ -205,7 +205,7 @@ ion-title {
                 padding: 0.5em;
                 display: flex;
                 justify-content: center;
-                margin: 0.5em;
+                margin: 0.5em 2em;
                 font-size: 0.85em;
                 border-top: 1px solid var(--ion-color-light);
                 border-bottom: 1px solid var(--ion-color-light);
