--- a/src/app/pages/message-board/message-board.page.html
+++ b/src/app/pages/message-board/message-board.page.html
@@ -2,7 +2,7 @@
   <ion-toolbar color="light">
     <div class="toolbar-wrapper">
       <ion-title text-left>
-        Hub
+        Family Hub
       </ion-title>
     </div>
   </ion-toolbar>
